fixed the homepage and the align the favourites counter

--- a/public/css/xf.css
+++ b/public/css/xf.css
@@ -348,7 +348,7 @@ div.tab{
   color: #024;
   font-variant:small-caps;
   font-weight:bold;
-  width: 30.33%;
+  width:50%;
 }
 div.tab button{
   background-color: inherit;
